--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.6.1",
+    "gravatar": "^1.8.1",
     "method-override": "^3.0.0",
     "moment": "^2.27.0",
     "mongoose": "^5.10.2",
