some code and comment formatting

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "devconnector",
   "version": "1.0.0",
   "description": "App built as part of the MERN Stack Front To Back course by Brad Traversy on O'Reilly",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
