--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "animejs": "^3.2.0",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
