--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,14 @@
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "shortid": "^2.2.15"
   },
   "scripts": {
     "start": "react-scripts start",
