--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,13 @@
     "http-proxy-middleware": "^1.0.5",
     "moment": "^2.29.0",
     "react": "^16.13.1",
+    "react-avatar-editor": "^11.0.10",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-moment": "^1.0.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.4",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "shortid": "^2.2.15"
