--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-moment": "^1.0.0",
+    "react-paginate": "^6.5.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
