--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.2.6",
     "http-proxy-middleware": "^1.0.5",
     "moment": "^2.29.0",
+    "quill": "^1.3.6",
     "react": "^16.13.1",
     "react-avatar-editor": "^11.0.9",
     "react-beautiful-dnd": "^13.0.0",
