--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,13 @@
     "classnames": "^2.2.6",
     "http-proxy-middleware": "^1.0.5",
     "moment": "^2.29.0",
-    "quill": "^1.3.6",
     "react": "^16.13.1",
     "react-avatar-editor": "^11.0.9",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-moment": "^1.0.0",
     "react-paginate": "^6.5.0",
+    "react-quill": "^1.3.5",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
