--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "animejs": "^3.2.0",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
+    "html-react-parser": "^1.1.1",
     "http-proxy-middleware": "^1.0.5",
     "moment": "^2.29.0",
     "react": "^16.13.1",
