--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "sanitize-html": "^2.3.0",
     "streamifier": "^0.1.1"
   }
 }
