[server] added mongoose-algolia to the package.json

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "method-override": "^3.0.0",
     "moment": "^2.27.0",
     "mongoose": "^5.10.2",
+    "mongoose-algolia": "^1.10.1",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
