--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,13 @@
     "classnames": "^2.2.6",
     "html-react-parser": "^1.1.1",
     "http-proxy-middleware": "^1.0.5",
-    "instantsearch.js": "^4.16.1",
     "moment": "^2.29.0",
     "react": "^16.13.1",
+    "react-autosuggest": "^10.1.0",
     "react-avatar-editor": "^11.0.9",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
+    "react-instantsearch-dom": "^6.10.3",
     "react-moment": "^1.0.0",
     "react-paginate": "^6.5.0",
     "react-quill": "^1.3.5",
