--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.9.1",
+    "google-auth-library": "^7.0.3",
     "gravatar": "^1.8.1",
     "method-override": "^3.0.0",
     "moment": "^2.27.0",
