--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@primer/octicons-react": "^12.1.0",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -22,6 +23,7 @@
     "react-dom": "^16.13.1",
     "react-google-login": "^5.2.2",
     "react-instantsearch-dom": "^6.10.3",
+    "react-loading-skeleton": "^2.2.0",
     "react-moment": "^1.0.0",
     "react-paginate": "^6.5.0",
     "react-quill": "^1.3.5",
